--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
   </head>
   <body>
 
+    <!-- Just an image -->
+    <nav class="navbar navbar-light bg-faded">
+      <a class="navbar-brand" href="#">
+	<img src="rust.png" width="30" height="30" alt="">
+      </a>
+      <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	  <div class="navbar-brand">
+	    <a class="nav-item nav-link active" href="javascript:scroll('why-rust')">Why Rust </a>
+	    <a class="nav-item nav-link active" href="javascript:scroll('ownership')">Ownership </a>
+	    <a class="nav-item nav-link active" href="javascript:scroll('ref-and-borrow')">References and Borrowing</a>
+	    <a class="nav-item nav-link active" href="javascript:scroll('borrow-rulez')">Borrowing: the Rulez</a>
+	    <a class="nav-item nav-link active" href="javascript:scroll('lifetimes')">Lifetimes</a>
+	    <a class="nav-item nav-link active" href="javascript:scroll('lifetimes-rulez')">Elided Lifetimes</a>
+	    
+	  </div>
+	</div>
+      </nav>
+    </nav>
+
     <div id="header">
       <h1 id="bigTitle"><a href="https://www.rust-lang.org/en-US/"><span><img src="rust.png" height="6%" width="6%">UST</span></a></h1>
       <h2><a href="https://github.com/evookelj/evookelj.github.io">Team Doppelgänger 2.0: EV and BSS</a></h2>
